# quorom

./: .env.example  .gitignore  Makefile  README.md
backend/: pyproject.toml
backend/app/: bus.py  chat.py  config.py  main.py  mock_runner.py  session_runner.py  sessions.py  types.py  verdict_pdf.py
backend/app/ingest/: arxiv_ingest.py  pdf_ingest.py  sectionize.py
backend/app/llm/: cache_warmup.py  client.py  stream_loop.py  tools_schema.py
backend/app/llm/prompts/: orchestrator.py  report.py  reviewer.py  senior.py  verdict.py
backend/app/routes/: chat.py  paper.py  sessions.py  stream.py
backend/app/tools/: arxiv_tool.py  dispatch.py  s2_tool.py  sandbox_tool.py  stats_tool.py
backend/sandbox/: Dockerfile
backend/tests/: test_bus.py  test_dispatch.py  test_ingest.py  test_mock_runner.py  test_sandbox_tool.py  test_sessions.py  test_stats_tool.py  test_stream_loop.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/.gstack/: browse-audit.jsonl
frontend/src/: App.css  App.tsx  main.tsx  types.ts
frontend/src/components/: AgentCard.css  AgentCard.tsx  ChairCard.css  ChairCard.tsx  ChatCard.css  ChatCard.tsx  ClaudeCodePackage.css  ClaudeCodePackage.tsx  ConvergingBar.css  ConvergingBar.tsx  MarginRail.css  MarginRail.tsx  Masthead.css  Masthead.tsx  PaperBody.css  PaperBody.tsx  PaperPDF.css  PaperPDF.tsx  PhaseIdle.css  PhaseIdle.tsx  PhaseRibbon.css  PhaseRibbon.tsx  SeniorLive.css  SeniorLive.tsx  SevBadge.css  SevBadge.tsx  Toasts.css  Toasts.tsx  TopNav.css  TopNav.tsx  (+8 more)
(+7 files in other folders)
