[project]
name = "quorum-backend"
version = "0.1.0"
description = "Quorum — adversarial academic paper review, backend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "arxiv>=2.1",
    "httpx>=0.27",
    "pypdf>=4.3",
    "pymupdf4llm>=0.0.17",
    "reportlab>=4.2",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "tenacity>=8.5",
    "numpy>=1.26",
    "scipy>=1.13",
    "sympy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
